--- a/Simply_Client/static/css/form-reg.css
+++ b/Simply_Client/static/css/form-reg.css
@@ -8,6 +8,7 @@
 * {
   margin: 0;
   padding: 0;
+  font-family: 'Montserrat';
 }
 
 
@@ -78,7 +79,31 @@
   font-size: 4px;
 }
 
+/* content form input */
 
+.content-form {
+  padding: 30px;
+}
+
+.content-input {
+  display: flex;
+  flex-direction: column;
+}
+
+.content-input input {
+  margin: 10px 0;
+  padding: 15px;
+  border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
+  border: 1px solid var(--greyish-color);
+}
+
+.content-form-input {
+  width: 100%;
+}
 
 /* content-footer */
 .content-footer {
