--- a/Simply_Client/static/css/form-reg.css
+++ b/Simply_Client/static/css/form-reg.css
@@ -103,7 +103,14 @@
 
 .content-form-input {
   width: 100%;
+  display: flex;
+  gap: 10px;
 }
+
+.content-form-input input {
+  width: 100%;
+}
+
 
 /* content-footer */
 .content-footer {
@@ -115,7 +122,7 @@
 
 .content-footer button {
   cursor: pointer;
-  padding: 10px;
+  padding: 10px 15px;
   border-radius: 5px;
   background-color: var(--primary-color);
   -webkit-border-radius: 5px;
@@ -133,6 +140,8 @@
 .content-footer button a {
   text-decoration: none;
   color: var(--light-color);
+  font-weight: bold;
+  font-size: 20px;
 }
 
 .content-footer button:hover {
