--- a/Simply_Client/static/css/upload.css
+++ b/Simply_Client/static/css/upload.css
@@ -126,7 +126,7 @@
 
 .content-footer button {
     cursor: pointer;
-    padding: 10px;
+    padding: 10px 15px;
     border-radius: 5px;
     background-color: var(--primary-color);
     -webkit-border-radius: 5px;
@@ -144,6 +144,8 @@
 .content-footer button a {
     text-decoration: none;
     color: var(--light-color);
+    font-weight: bolder;
+    font-size: 20px;
 }
 
 .content-footer button:hover {
