--- a/Simply_Client/static/css/payment-opt.css
+++ b/Simply_Client/static/css/payment-opt.css
@@ -69,3 +69,39 @@
   margin-top: 10px;
   font-weight: 600;
 }
+
+/* content */
+.content-nominal {
+  width: 100%;
+  height: 100px;
+  text-align: center;
+  background: var(--dark-color);
+  color: var(--light-color);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.content-paymethod h3 {
+  margin: 20px 0;
+}
+
+.content-paymethod .payment-method {
+  padding: 15px;
+  border: 1px solid var(--greyish-color);
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  border-radius: 10px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
+  margin-bottom: 15px;
+  cursor: pointer;
+}
+
+.content-paymethod .payment-method i {
+  font-size: 24px;
+}
