--- a/Simply_Client/static/css/form-reg.css
+++ b/Simply_Client/static/css/form-reg.css
@@ -20,7 +20,7 @@
 }
 
 .container .content-header {
-  padding: 30px;
+  padding: 30px 30px 10px 30px;
 }
 
 .container .content-header .content-header-back {
@@ -45,7 +45,7 @@
 }
 
 .container .content-ktp {
-  padding: 30px;
+  padding: 10px 30px 30px 30px;
 }
 
 .container .content-ktp .content-ktp-note {
