--- a/Simply_Client/static/css/upload.css
+++ b/Simply_Client/static/css/upload.css
@@ -18,7 +18,7 @@
 }
 
 .container .content-header {
-    padding: 30px;
+    padding: 30px 30px 10px 30px;
 }
 
 .container .content-header .content-header-back {
@@ -43,8 +43,9 @@
 }
 
 .container .content-ktp {
-    padding: 30px;
+    padding: 10px 30px 30px 30px;
 }
+
 
 .container .content-ktp .content-ktp-note {
     background-color: #FFDE16;
