--- a/Simply_Client/templates/payment-opt.html
+++ b/Simply_Client/templates/payment-opt.html
@@ -1,6 +1,6 @@
 {% extends "base-bar.html" %} {% load static %} {% block style %}
 <link rel="stylesheet" href="{% static 'css/payment-opt.css' %}" />
-{% endblock %} {% block title %} Payment {% endblock %} {% block content %}
+{% endblock %} {% block title %} Opsi Pembayaran {% endblock %} {% block content %}
 
 <div class="container">
   <div class="content-header">
@@ -8,7 +8,7 @@
       <i class="fa-solid fa-chevron-left"></i>
       <p>Kembali</p>
     </a>
-    <h2>Pembayaran</h2>
+    <h2>Opsi Pembayaran</h2>
   </div>
   <span></span>
   <div class="content-ktp">
