--- a/Simply_Client/templates/schedule.html
+++ b/Simply_Client/templates/schedule.html
@@ -1,3 +1,40 @@
-{% extends "base-bar.html" %} {% load static %} {% block style %}
+{% extends "base-bar.html" %}
+{% load static %} {% block style %}
 <link rel="stylesheet" href="{% static 'css/schedule.css' %}" />
-{% endblock %} {% block title %} Schedule {% endblock %}
+{% endblock %}
+{% block title %} Jadwal Test {% endblock %}
+{% block content %}
+
+<div class="container">
+    <div class="content-header">
+        <a href="" class="content-header-back">
+            <i class="fa-solid fa-chevron-left"></i>
+            <p>Kembali</p>
+        </a>
+        <h2>Jadwal Pengujian</h2>
+    </div>
+    <span></span>
+    <div class="content-ktp">
+        <p>Lengkapi seluruh dokumen kelengkapan untuk segera mendapatkan SIM. Informasi yang telah anda unggah akan kami
+            simpan dengan aman.</p>
+        <span></span>
+        <h3>
+            Tempat Pelaksanaan
+        </h3>
+        <p>
+            Satpas Colombo SIM (SBY)
+        </p>
+        <p>
+            Jl. Ikan Kerapu No.2-4, Perak Bar., Kec. Krembangan, Surabaya, Jawa Timur 60177
+        </p>
+        <span></span>
+        <h3>
+            Waktu Test
+        </h3>
+        <p>
+            15 Januari 2024 (12.00 - Selesai)
+        </p>
+    </div>
+</div>
+
+{% endblock %}
