patch: added qris page

--- a/Simply_Client/templates/payment-opt.html
+++ b/Simply_Client/templates/payment-opt.html
@@ -40,26 +40,26 @@
       <h3>
         Pilih Metode Pembayaran
       </h3>
-      <div class="payment-method">
+      <a href="{% url 'Simply_Client:qris' %}" class="payment-method">
         <img src="{% static 'img/BNI Bank Negara Indonesia 1.png' %}" alt="#">
         <i class="fa-solid fa-chevron-right"></i>
-      </div>
-      <div class="payment-method">
+      </a>
+      <a href="{% url 'Simply_Client:qris' %}" class="payment-method">
         <img src="{% static 'img/Bank BRI 1.png' %}" alt="#">
         <i class="fa-solid fa-chevron-right"></i>
-      </div>
-      <div class="payment-method">
+      </a>
+      <a href="{% url 'Simply_Client:qris' %}" class="payment-method">
         <img src="{% static 'img/logo-bank-bca 2.png' %}" alt="#">
         <i class="fa-solid fa-chevron-right"></i>
-      </div>
-      <div class="payment-method">
+      </a>
+      <a href="{% url 'Simply_Client:qris' %}" class="payment-method">
         <img src="{% static 'img/Bank_Mandiri_logo 1.png' %}" alt="#">
         <i class="fa-solid fa-chevron-right"></i>
-      </div>
-      <div class="payment-method">
+      </a>
+      <a href="{% url 'Simply_Client:qris' %}" class="payment-method">
         <img src="{% static 'img/QRIS_logo 1.png' %}" alt="#">
         <i class="fa-solid fa-chevron-right"></i>
-      </div>
+      </a>
     </div>
   </div>
   <!-- <h1>Pembayaran</h1>
