--- a/Simply_Client/templates/schedule.html
+++ b/Simply_Client/templates/schedule.html
@@ -35,6 +35,12 @@
             15 Januari 2024 (12.00 - Selesai)
         </p>
     </div>
+    <span></span>
+    <div class="content-footer">
+        <button>
+            <a href="{% url 'Simply_Client:tracking' %}">Lanjutkan</a>
+        </button>
+    </div>
 </div>
 
 {% endblock %}
