--- a/Simply_Client/templates/tracking.html
+++ b/Simply_Client/templates/tracking.html
@@ -17,8 +17,37 @@
   <div class="content-ktp">
     <p>Lengkapi seluruh dokumen kelengkapan untuk segera mendapatkan SIM. Informasi yang telah anda unggah akan kami
       simpan dengan aman.</p>
+    <span></span>
+    <h3>
+      Asal Pengiriman
+    </h3>
+    <p>
+      Satpas Colombo SIM (Surabaya)
+    </p>
+    <span></span>
+    <h3>
+      Tujuan Pengiriman
+    </h3>
+    <p>
+      Jl. Bhaskara Utara IV No.12A, Kalisari, Kec.Mulyorejo
+    </p>
+    <p>
+      Surabaya Jawa Timur 60112
+    </p>
+    <span></span>
+    <h3>
+      Status Pengiriman
+    </h3>
+    <p>
+      <i class="fa-solid fa-location-dot"></i>Paket telah sampai di lokasi transit Sukolilo Hub
+    </p>
   </div>
   <span></span>
+  <div class="content-footer">
+    <button>
+      <a href="">Diterima</a>
+    </button>
+  </div>
 </div>
 
 {% endblock %}
