--- a/Simply_Client/templates/upload.html
+++ b/Simply_Client/templates/upload.html
@@ -93,7 +93,7 @@
   <span></span>
   <div class="content-footer">
     <button>
-      <a href="">Simpan dan Lanjutkan</a>
+      <a href="{% url 'Simply_Client:validation' %}">Simpan dan Lanjutkan</a>
     </button>
   </div>
 </div>
