--- a/Simply_Client/templates/validation.html
+++ b/Simply_Client/templates/validation.html
@@ -23,6 +23,12 @@
             <h4>Dokumen Masih Dalam Proses Validasi</h4>
         </div>
     </div>
+    <span></span>
+    <div class="content-footer">
+        <button>
+            <a href="{% url 'Simply_Client:schedule' %}">Lanjutkan</a>
+        </button>
+    </div>
 </div>
 
 {% endblock %}
