--- a/Simply_Client/static/css/form-reg.css
+++ b/Simply_Client/static/css/form-reg.css
@@ -117,7 +117,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 30px;
+  padding: 10px 30px 30px 30px;
 }
 
 .content-footer button {
