patch: x-icon added

--- a/Simply_Client/templates/base.html
+++ b/Simply_Client/templates/base.html
@@ -12,7 +12,7 @@
     {% load static %}
     {% block style%}{% endblock %}
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
-
+    <link rel="shortcut icon" href="{% static 'img/korlantas.png' %}" type="image/x-icon">
     <title>{% block title %} {% endblock %}</title>
 </head>
 
