--- a/Simply_Client/templates/form-reg.html
+++ b/Simply_Client/templates/form-reg.html
@@ -1,12 +1,14 @@
 {% extends "base-bar.html" %}
 {% load static %}{% block style%}
 <link rel="stylesheet" href="{% static 'css/form-reg.css' %}">
+<link rel="shortcut icon" href="{% static 'img/korlantas.png' %}" type="image/x-icon">
 {% endblock %}
-{% block title %} Registrasi Data Diri {% endblock %} {% block content %}
+{% block title %} Registrasi Data Diri {% endblock %}
+{% block content %}
 
 <div class="container">
   <div class="content-header">
-    <a href="" class="content-header-back">
+    <a href="{% url 'Simply_Client:home' %}" class="content-header-back">
       <i class="fa-solid fa-chevron-left"></i>
       <p>Kembali</p>
     </a>
