--- a/Simply_Client/templates/home.html
+++ b/Simply_Client/templates/home.html
@@ -2,6 +2,7 @@
 {% load static %}
 {% block style %}
 <link rel="stylesheet" href="{% static 'css/home.css' %}" />
+<link rel="shortcut icon" href="{% static 'img/korlantas.png' %}" type="image/x-icon">
 {% endblock %}
 
 {% block title %}
