--- a/Simply_Client/templates/payment-opt.html
+++ b/Simply_Client/templates/payment-opt.html
@@ -1,10 +1,14 @@
-{% extends "base-bar.html" %} {% load static %} {% block style %}
+{% extends "base-bar.html" %}
+{% load static %} {% block style %}
 <link rel="stylesheet" href="{% static 'css/payment-opt.css' %}" />
-{% endblock %} {% block title %} Opsi Pembayaran {% endblock %} {% block content %}
+<link rel="shortcut icon" href="{% static 'img/korlantas.png' %}" type="image/x-icon">
+{% endblock %}
+{% block title %} Opsi Pembayaran {% endblock %}
+{% block content %}
 
 <div class="container">
   <div class="content-header">
-    <a href="" class="content-header-back">
+    <a href="{% url 'Simply_Client:registration' %}" class="content-header-back">
       <i class="fa-solid fa-chevron-left"></i>
       <p>Kembali</p>
     </a>
