--- a/Simply_Client/templates/schedule.html
+++ b/Simply_Client/templates/schedule.html
@@ -1,13 +1,14 @@
 {% extends "base-bar.html" %}
 {% load static %} {% block style %}
 <link rel="stylesheet" href="{% static 'css/schedule.css' %}" />
+<link rel="shortcut icon" href="{% static 'img/korlantas.png' %}" type="image/x-icon">
 {% endblock %}
 {% block title %} Jadwal Test {% endblock %}
 {% block content %}
 
 <div class="container">
     <div class="content-header">
-        <a href="" class="content-header-back">
+        <a href="{% url 'Simply_Client:validation' %}" class="content-header-back">
             <i class="fa-solid fa-chevron-left"></i>
             <p>Kembali</p>
         </a>
