--- a/Simply_Client/templates/form-reg.html
+++ b/Simply_Client/templates/form-reg.html
@@ -64,7 +64,7 @@
   <span></span>
   <div class="content-footer">
     <button>
-      <a href="">Simpan dan Lanjutkan</a>
+      <a href="{% url 'Simply_Client:payment' %}">Simpan dan Lanjutkan</a>
     </button>
   </div>
 </div>
