--- a/Simply_Client/templates/home.html
+++ b/Simply_Client/templates/home.html
@@ -10,7 +10,18 @@ Selamat Datang
 {% endblock %}
 
 {% block content %}
+<div class="main-landing">
+<div class="landing-banner">
+    <h1>
+        Buat SIM-mu Dengan Lebih Mudah
+    </h1>
+    <span></span>
+    <img src="{% static 'img/home-bg.png' %}">
+</div>
 <div class="container">
+    <p>
+        "Selamat datang di Simply, sebuah platform yang dirancang untuk mempermudah Anda dalam proses administratif pendaftaran pembuatan Surat Izin Mengemudi. Kami berkomitmen untuk memberikan pengalaman yang lebih efisien dan mudah, sehingga Anda dapat dengan cepat dan lancar mendapatkan SIM tanpa kesulitan."
+    </P>
     <h1>
         PILIH JENIS SIM YANG INGIN ANDA AJUKKAN
     </h1>
@@ -40,6 +51,7 @@ Selamat Datang
             </div>
         </a>
     </div>
+</div>
 </div>
 </div>
 {% endblock %}
