--- a/Simply_Client/templates/upload.html
+++ b/Simply_Client/templates/upload.html
@@ -48,7 +48,7 @@
       </p>
       <div class="upload-file">
         <input type="file" id="file-ktp">
-        <label for="file-ktp">Pilih File</label>
+        <label for="file-ktp">KTP_09876729765678939.pdf</label>
       </div>
       <span></span>
     </div>
