--- a/Simply_Client/static/css/form-reg.css
+++ b/Simply_Client/static/css/form-reg.css
@@ -30,6 +30,7 @@
   flex-direction: row;
   align-items: center;
   gap: 5px;
+  margin-bottom: 5px;
 }
 
 .container .content-header .content-header-back i {
@@ -46,6 +47,10 @@
 
 .container .content-ktp {
   padding: 10px 30px 30px 30px;
+}
+
+.container .content-ktp p {
+  line-height: 1.75em;
 }
 
 .container .content-ktp .content-ktp-note {
