--- a/Simply_Client/static/css/home.css
+++ b/Simply_Client/static/css/home.css
@@ -1,70 +1,110 @@
 /* File: static/css/home.css */
-
-.container {
-    margin-top: 140px;
-    box-sizing: border-box;
-    padding: 0 240px;
-    text-align: center;
+:root {
+  --primary-color: #0e65d9;
+  --dark-color: #141414;
+  --greyish-color: #d9d9d9;
+  --light-color: #ffffff;
 }
 
+.container {
+  margin-top: 40px;
+  box-sizing: border-box;
+  padding: 0 240px;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.container p {
+  margin-bottom: 40px;
+}
+.landing-banner {
+  margin-bottom: 40px;
+  width: 100%;
+  background-color: linear-gradient(
+    90deg,
+    #3545a5 25.02%,
+    rgba(53, 69, 165, 0.86) 50.34%,
+    rgba(0, 0, 0, 0) 126.75%
+  );
+  border-radius: 20px;
+}
+
+.landing-banner span {
+}
+.landing-banner img {
+  width: 100%;
+  border-radius: 20px;
+  z-index: -1;
+}
+
+.landing-banner h1 {
+  width: 700px;
+  font-size: 90px;
+  color: var(--light-color);
+  text-align: left;
+  position: absolute;
+}
 .card-container {
-    display: flex;
-    flex-direction: row;
-    gap: 40px;
-    justify-content: center;
-    align-items: center;
-    margin-top: 80px;
+  display: flex;
+  flex-direction: row;
+  gap: 40px;
+  justify-content: center;
+  align-items: center;
+  margin-top: 80px;
 }
 
 .card {
-    position: relative;
-    width: 400px;
-    height: 600px;
-    border-radius: 45px;
-    overflow: hidden;
-    cursor: pointer;
+  position: relative;
+  width: 400px;
+  height: 600px;
+  border-radius: 45px;
+  overflow: hidden;
+  cursor: pointer;
 }
 
 .card-text {
-    position: absolute;
-    color: #fff;
-    z-index: 99;
-    display: flex;
-    flex-direction: column;
-    width: 300px;
-    text-align: justify;
-    padding-left: 55px;
-    transform: translateY(470px);
-    transition: all .5s ease;
-    /* Set initial opacity to 0 */
+  position: absolute;
+  color: #fff;
+  z-index: 99;
+  display: flex;
+  flex-direction: column;
+  width: 300px;
+  text-align: justify;
+  padding-left: 55px;
+  transform: translateY(470px);
+  transition: all 0.5s ease;
+  /* Set initial opacity to 0 */
 }
 
 .card-text p {
-    opacity: 0;
-    transition: all .5s ease;
+  opacity: 0;
+  transition: all 0.5s ease;
 }
 
 .card-text h1 {
-    font-weight: 800;
-    font-size: 99px;
-    margin-bottom: 10px;
+  font-weight: 800;
+  font-size: 99px;
+  margin-bottom: 10px;
 }
 
 .card-image {
-    filter: brightness(20%);
-    transition: all .5s ease;
+  filter: brightness(20%);
+  transition: all 0.5s ease;
 }
 
 .card:hover .card-image {
-    filter: brightness(60%);
-    transform: scale(1.1);
+  filter: brightness(60%);
+  transform: scale(1.1);
 }
 
 .card:hover .card-text {
-    transform: translateY(280px);
-    /* Set opacity to 1 on hover */
+  transform: translateY(280px);
+  /* Set opacity to 1 on hover */
 }
 
 .card:hover .card-text p {
-    opacity: 1;
+  opacity: 1;
 }
