--- a/Simply_Client/static/css/tracking.css
+++ b/Simply_Client/static/css/tracking.css
@@ -1,98 +1,101 @@
 :root {
-    --primary-color: #0E65D9;
-    --dark-color: #141414;
-    --greyish-color: #D9D9D9;
-    --light-color: #ffffff;
+  --primary-color: #0e65d9;
+  --dark-color: #141414;
+  --greyish-color: #d9d9d9;
+  --light-color: #ffffff;
 }
 
 * {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 .container {
-    width: 100%;
-    border-radius: 10px;
-    border: 1px solid var(--greyish-color);
-    background: #FFF;
+  width: 100%;
+  border-radius: 10px;
+  border: 1px solid var(--greyish-color);
+  background: #fff;
 }
 
 .container .content-header {
-    padding: 30px 30px 10px 30px;
+  padding: 30px 30px 10px 30px;
 }
 
-
 .container .content-header .content-header-back {
-    text-decoration: none;
-    color: var(--dark-color);
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    gap: 5px;
+  text-decoration: none;
+  color: var(--dark-color);
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 5px;
+  margin-bottom: 5px;
 }
 
 .container .content-header .content-header-back i {
-    font-size: 10px;
+  font-size: 10px;
 }
 
 .container span {
-    display: block;
-    height: 1px;
-    width: 100%;
-    background-color: var(--greyish-color);
-    margin: 10px 0;
+  display: block;
+  height: 1px;
+  width: 100%;
+  background-color: var(--greyish-color);
+  margin: 10px 0;
 }
 
 .container .content-ktp {
-    padding: 10px 30px 30px 30px;
+  padding: 10px 30px 30px 30px;
+}
+
+.container .content-ktp p {
+  line-height: 1.75em;
 }
 
 .container .content-ktp h3 {
-    margin-bottom: 10px;
+  margin-bottom: 10px;
 }
 
 .container .content-ktp i {
-    margin-right: 10px;
+  margin-right: 10px;
 }
-
 
 /* content-footer */
 .content-footer {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 10px 30px 30px 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 10px 30px 30px 30px;
 }
 
 .content-footer button {
-    cursor: pointer;
-    padding: 10px 15px;
-    border-radius: 5px;
-    background-color: #1DFF26;
-    -webkit-border-radius: 5px;
-    -moz-border-radius: 5px;
-    -ms-border-radius: 5px;
-    -o-border-radius: 5px;
-    border: 1px solid #1DFF26;
-    transition: .3s ease-in-out;
-    -webkit-transition: .3s ease-in-out;
-    -moz-transition: .3s ease-in-out;
-    -ms-transition: .3s ease-in-out;
-    -o-transition: .3s ease-in-out;
+  cursor: pointer;
+  padding: 10px 15px;
+  border-radius: 5px;
+  background-color: #00be08;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
+  border: 1px solid #00be08;
+  transition: 0.3s ease-in-out;
+  -webkit-transition: 0.3s ease-in-out;
+  -moz-transition: 0.3s ease-in-out;
+  -ms-transition: 0.3s ease-in-out;
+  -o-transition: 0.3s ease-in-out;
 }
 
 .content-footer button a {
-    text-decoration: none;
-    color: var(--light-color);
-    font-weight: bold;
-    font-size: 20px;
+  text-decoration: none;
+  color: var(--light-color);
+  font-weight: bold;
+  font-size: 20px;
 }
 
 .content-footer button:hover {
-    border: 1px solid #1DFF26;
-    background-color: transparent;
+  border: 1px solid #00be08;
+  background-color: transparent;
 }
 
 .content-footer button:hover a {
-    color: #1DFF26;
+  color: #00be08;
 }
