--- a/Simply_Client/static/css/upload.css
+++ b/Simply_Client/static/css/upload.css
@@ -1,159 +1,164 @@
 :root {
-    --primary-color: #0E65D9;
-    --dark-color: #141414;
-    --greyish-color: #D9D9D9;
-    --light-color: #ffffff;
+  --primary-color: #0e65d9;
+  --dark-color: #141414;
+  --greyish-color: #d9d9d9;
+  --light-color: #ffffff;
 }
 
 * {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 .container {
-    width: 100%;
-    border-radius: 10px;
-    border: 1px solid var(--greyish-color);
-    background: #FFF;
+  width: 100%;
+  border-radius: 10px;
+  border: 1px solid var(--greyish-color);
+  background: #fff;
 }
 
 .container .content-header {
-    padding: 30px 30px 10px 30px;
+  padding: 30px 30px 10px 30px;
 }
 
 .container .content-header .content-header-back {
-    text-decoration: none;
-    color: var(--dark-color);
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    gap: 5px;
+  text-decoration: none;
+  color: var(--dark-color);
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 5px;
+  margin-bottom: 5px;
 }
 
 .container .content-header .content-header-back i {
-    font-size: 10px;
+  font-size: 10px;
 }
 
 .container span {
-    display: block;
-    height: 1px;
-    width: 100%;
-    background-color: var(--greyish-color);
-    margin: 10px 0;
+  display: block;
+  height: 1px;
+  width: 100%;
+  background-color: var(--greyish-color);
+  margin: 10px 0;
 }
 
 .container .content-ktp {
-    padding: 10px 30px 30px 30px;
+  padding: 10px 30px 30px 30px;
 }
 
+.container .content-ktp p {
+  line-height: 1.75em;
+}
 
 .container .content-ktp .content-ktp-note {
-    background-color: #FFDE16;
-    padding: 20px;
-    margin: 20px 0px;
-    display: flex;
-    flex-direction: row;
-    gap: 10px;
-    border-radius: 10px;
-    -webkit-border-radius: 10px;
-    -moz-border-radius: 10px;
-    -ms-border-radius: 10px;
-    -o-border-radius: 10px;
+  background-color: #ffde16;
+  padding: 20px;
+  margin: 20px 0px;
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+  border-radius: 10px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
 }
 
 .container .content-ktp .content-ktp-note .right-part-warning {
-    margin-top: 10px;
-
+  margin-top: 5px;
+  font-weight: 500;
+  line-height: 1.75em;
 }
 
 .container .content-ktp .content-ktp-note .right-part-warning p {
-    margin-left: 20px;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    gap: 5px;
+  margin-left: 20px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 5px;
 }
 
 .container .content-ktp .content-ktp-note .right-part-warning i {
-    font-size: 4px;
+  font-size: 4px;
 }
 
 /* content-ktp-upload */
 .upload-file {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .content-ktp-upload .upload-file input {
-    display: none;
+  display: none;
 }
 
 .content-ktp-upload .upload-file label {
-    margin: 30px 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
-    width: 100%;
-    height: 135px;
-    border-radius: 10px;
-    border: 1px dashed var(--dark-color);
-    -webkit-border-radius: 10px;
-    -moz-border-radius: 10px;
-    -ms-border-radius: 10px;
-    -o-border-radius: 10px;
-    cursor: pointer;
-    color: var(--dark-color);
-    transition: all .3s ease-in-out;
-    -webkit-transition: all .3s ease-in-out;
-    -moz-transition: all .3s ease-in-out;
-    -ms-transition: all .3s ease-in-out;
-    -o-transition: all .3s ease-in-out;
+  margin: 30px 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  width: 100%;
+  height: 135px;
+  border-radius: 10px;
+  border: 1px dashed var(--dark-color);
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
+  cursor: pointer;
+  color: var(--dark-color);
+  transition: all 0.3s ease-in-out;
+  -webkit-transition: all 0.3s ease-in-out;
+  -moz-transition: all 0.3s ease-in-out;
+  -ms-transition: all 0.3s ease-in-out;
+  -o-transition: all 0.3s ease-in-out;
 }
 
 .content-ktp-upload .upload-file label:hover {
-    color: var(--primary-color);
-    border: 1px dashed var(--primary-color);
+  color: var(--primary-color);
+  border: 1px dashed var(--primary-color);
 }
 
 /* content-footer */
 .content-footer {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 30px;
 }
 
 .content-footer button {
-    cursor: pointer;
-    padding: 10px 15px;
-    border-radius: 5px;
-    background-color: var(--primary-color);
-    -webkit-border-radius: 5px;
-    -moz-border-radius: 5px;
-    -ms-border-radius: 5px;
-    -o-border-radius: 5px;
-    border: 1px solid var(--primary-color);
-    transition: .3s ease-in-out;
-    -webkit-transition: .3s ease-in-out;
-    -moz-transition: .3s ease-in-out;
-    -ms-transition: .3s ease-in-out;
-    -o-transition: .3s ease-in-out;
+  cursor: pointer;
+  padding: 10px 15px;
+  border-radius: 5px;
+  background-color: var(--primary-color);
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
+  border: 1px solid var(--primary-color);
+  transition: 0.3s ease-in-out;
+  -webkit-transition: 0.3s ease-in-out;
+  -moz-transition: 0.3s ease-in-out;
+  -ms-transition: 0.3s ease-in-out;
+  -o-transition: 0.3s ease-in-out;
 }
 
 .content-footer button a {
-    text-decoration: none;
-    color: var(--light-color);
-    font-weight: bolder;
-    font-size: 20px;
+  text-decoration: none;
+  color: var(--light-color);
+  font-weight: bolder;
+  font-size: 20px;
 }
 
 .content-footer button:hover {
-    border: 1px solid var(--primary-color);
-    background-color: transparent;
+  border: 1px solid var(--primary-color);
+  background-color: transparent;
 }
 
 .content-footer button:hover a {
-    color: var(--primary-color);
+  color: var(--primary-color);
 }
