--- a/Simply_Client/static/css/success.css
+++ b/Simply_Client/static/css/success.css
@@ -62,7 +62,7 @@
 
 
 .container .content-ktp .content-ktp-note {
-    background-color: #FFDE16;
+    background-color: #00be08;
     padding: 20px;
     margin: 20px 0px;
     display: flex;
@@ -74,7 +74,7 @@
     -ms-border-radius: 10px;
     -o-border-radius: 10px;
     text-decoration: none;
-    color: var(--dark-color);
+    color: var(--light-color);
 }
 
 
