--- a/Simply_Client/templates/base-bar.html
+++ b/Simply_Client/templates/base-bar.html
@@ -22,7 +22,7 @@
         <a href="/home">
             <img src="{% static 'img/Simply Logo.png'%}" alt="logo simply"></a>
         <div class="right-text-place">
-            <a href="">Apply<span></span></a>
+            <a href="/registration">Apply<span></span></a>
             <a href="/tracking">Tracking<span></span></a>
             <a href="">Username<span></span></a>
         </div>
