--- a/Simply_Client/templates/home.html
+++ b/Simply_Client/templates/home.html
@@ -11,47 +11,51 @@ Selamat Datang
 
 {% block content %}
 <div class="main-landing">
-<div class="landing-banner">
-    <h1>
-        Buat SIM-mu Dengan Lebih Mudah
-    </h1>
-    <span></span>
-    <img src="{% static 'img/home-bg.png' %}">
-</div>
-<div class="container">
-    <p>
-        "Selamat datang di Simply, sebuah platform yang dirancang untuk mempermudah Anda dalam proses administratif pendaftaran pembuatan Surat Izin Mengemudi. Kami berkomitmen untuk memberikan pengalaman yang lebih efisien dan mudah, sehingga Anda dapat dengan cepat dan lancar mendapatkan SIM tanpa kesulitan."
-    </P>
-    <h1>
-        PILIH JENIS SIM YANG INGIN ANDA AJUKKAN
-    </h1>
-    <div class="card-container">
-        <a class="card" href="{% url 'Simply_Client:registration' %}">
-            <div class="card-text">
-                <h1> SIM C </h1>
-                <p>SIM A adalah Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam elementum massa justo,
-                    sed ultrices odio posuere nec. Pellentesque varius nulla sed libero interdum, in fermentum urna
-                    sodales. Mauris et justo ullamcorper, egestas purus a, egestas dui.</p>
-            </div>
-            <div class="card-image">
-                <span></span>
-                <img alt="" src="{% static 'img/motor.png'%}">
-            </div>
-        </a>
-        <a class="card" href="{% url 'Simply_Client:registration' %}">
-            <div class="card-text">
-                <h1> SIM A </h1>
-                <p>SIM A adalah Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam elementum massa justo,
-                    sed ultrices odio posuere nec. Pellentesque varius nulla sed libero interdum, in fermentum urna
-                    sodales. Mauris et justo ullamcorper, egestas purus a, egestas dui.</p>
-            </div>
-            <div class="card-image">
-                <span></span>
-                <img alt="" src="{% static 'img/mobil.png'%}">
-            </div>
-        </a>
+    <div class="landing-banner">
+        <h1>
+            Buat SIM-mu Dengan Lebih Mudah
+        </h1>
+        <span></span>
+        <img alt="" src="{% static 'img/home-bg.png' %}">
     </div>
-</div>
+    <div class="container">
+        <p>
+            "Selamat datang di Simply, sebuah platform yang dirancang untuk mempermudah Anda dalam proses administratif
+            pendaftaran pembuatan Surat Izin Mengemudi. Kami berkomitmen untuk memberikan pengalaman yang lebih efisien
+            dan mudah, sehingga Anda dapat dengan cepat dan lancar mendapatkan SIM tanpa kesulitan."
+        </P>
+        <h1>
+            PILIH JENIS SIM YANG INGIN ANDA AJUKKAN
+        </h1>
+        <div class="card-container">
+            <a class="card" href="{% url 'Simply_Client:registration' %}">
+                <div class="card-text">
+                    <h1> SIM C </h1>
+                    <p>SIM A adalah Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam elementum massa
+                        justo,
+                        sed ultrices odio posuere nec. Pellentesque varius nulla sed libero interdum, in fermentum urna
+                        sodales. Mauris et justo ullamcorper, egestas purus a, egestas dui.</p>
+                </div>
+                <div class="card-image">
+                    <span></span>
+                    <img alt="" src="{% static 'img/motor.png'%}">
+                </div>
+            </a>
+            <a class="card" href="{% url 'Simply_Client:registration' %}">
+                <div class="card-text">
+                    <h1> SIM A </h1>
+                    <p>SIM A adalah Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam elementum massa
+                        justo,
+                        sed ultrices odio posuere nec. Pellentesque varius nulla sed libero interdum, in fermentum urna
+                        sodales. Mauris et justo ullamcorper, egestas purus a, egestas dui.</p>
+                </div>
+                <div class="card-image">
+                    <span></span>
+                    <img alt="" src="{% static 'img/mobil.png'%}">
+                </div>
+            </a>
+        </div>
+    </div>
 </div>
 </div>
 {% endblock %}
