--- a/Simply_Client/templates/qris.html
+++ b/Simply_Client/templates/qris.html
@@ -30,7 +30,7 @@
   <span></span>
   <div class="content-footer">
     <button>
-      <a href="{% url 'Simply_Client:upload' %}">Simpan dan Lanjutkan</a>
+      <a href="{% url 'Simply_Client:upload' %}">Konfirmasi Pembayaran</a>
     </button>
   </div>
 </div>
