--- a/Simply_Client/templates/base-bar.html
+++ b/Simply_Client/templates/base-bar.html
@@ -71,7 +71,7 @@
                 <i class="fa-solid fa-check"></i>
             </a>
             <a href="{% url 'Simply_Client:tracking' %}"
-                class="tab{% if active_link == 'tracking' %} active{% endif %}{% if active_link == '' %} done{% endif %}"
+                class="tab{% if active_link == 'tracking' %} active{% endif %}"
                 id="trackingLink">
                 <div class="tab-content">
                     <i class="fa-solid fa-truck" style="margin-right: 9px;"></i>
